--- a/ui/env/.env
+++ b/ui/env/.env
@@ -2,3 +2,13 @@ VITE_APP_NAME=ui
 VITE_BASE_PATH=/ui/
 VITE_APP_PORT=3000
 VITE_APP_TITLE = 'MaxKB'
+elevenlabsapikey=sk_549599d0bcb71f2fc1b6da5d0c05269bb1d386775b2e87f2
+AIRTABLE_API_KEY="${{shared.AIRTABLE_API_KEY}}"
+ANTHROPIC_API_KEY="${{shared.ANTHROPIC_API_KEY}}"
+DATABASE_PRIVATE_URL="${{Postgres-hu8_.DATABASE_PRIVATE_URL}}"
+DATABASE_URL="${{Postgres-hu8_.DATABASE_URL}}"
+dev21_api_key="${{shared.dev21_api_key}}"
+elevenlabsapikey="${{shared.elevenlabsapikey}}"
+grok="${{shared.grok}}"
+OPENAI_API_KEY="${{shared.OPENAI_API_KEY}}"
+PGHOST="${{Postgres.PGHOST}}"
