--- a/railway.toml
+++ b/railway.toml
@@ -7,12 +7,12 @@ name = "MaxKB"
     start = "python main.py"
 
 [deploy]
-      OPENAI_API_KEY = "${{shared.OPENAI_API_KEY}}"
-      AIRTABLE_API_KEY = "${{shared.AIRTABLE_API_KEY}}"
-      DATABASE_URL = "${{Postgres-hu8_.DATABASE_URL}}"
-      OPENAI_API_KEY = "your_openai_api_key"
-      AIRTABLE_API_KEY = "your_airtable_api_key"
-      DATABASE_URL = "your_postgres_database_url"
+      # OPENAI_API_KEY = "${{shared.OPENAI_API_KEY}}"
+      # AIRTABLE_API_KEY = "${{shared.AIRTABLE_API_KEY}}"
+      # DATABASE_URL = "${{Postgres-hu8_.DATABASE_URL}}"
+      # OPENAI_API_KEY = "your_openai_api_key"
+      # AIRTABLE_API_KEY = "your_airtable_api_key"
+      # DATABASE_URL = "your_postgres_database_url"
   [[deploy.services]]
     name = "maxkb-service"
     start = "python main.py"
