--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "maxkb"
 version = "0.1.0"
 description = "智能知识库问答系统"
 authors = ["shaohuzhang1 <shaohu.zhang@fit2cloud.com>"]
-readme = "README.md"
+# readme = "README.md"
 # package-mode = false
 
 [tool.poetry.dependencies]
